--- a/LatexTFG/Capitulos/04Capitulo4.tex
+++ b/LatexTFG/Capitulos/04Capitulo4.tex
@@ -90,6 +90,7 @@ Sin embargo consideramos que todavía podían hacerse más mejoras e implementación
 \item Detección y prevención de bradicardias y taquicardias.
 \item Posibilidad de animar ECGs previamente almacenados, de forma que parece que se está observando el ECG en tiempo real.
 \item Registro de incidencias de cada paciente, y de la fecha en la que son detectadas.
+\item Posibilidad de aplicar el producto final en un entorno real.
 \end{itemize}
 
 Sabíamos que la realización de todas estas ampliaciones supondría un reto técnico a nuestras capacidades como informáticos, sobre todo si queríamos implementar exitosamente la opción de realizar una retransmisión de información en tiempo real de pacientes a doctores. El despliegue de un servidor que actuase como intermediario entre ambos era totalmente necesario para garantizar la comunicación entre los dos extremos. La conexión a este servidor se realizaría por ambas partes mediante una conexión a internet.
