--- a/LatexTFG/Tesis.tex
+++ b/LatexTFG/Tesis.tex
@@ -79,6 +79,8 @@ constantes,guionado,Cascaras/bibliografia,config%
 
 \usepackage{hyperref}
 
+\usepackage{listings}
+
 % Incluimos el fichero con comandos de constantes
 \include{constantes}
 
@@ -150,6 +152,7 @@ constantes,guionado,Cascaras/bibliografia,config%
 % Apéndices
 \appendix
 \include{Apendices/01ApendiceA}
+\include{Apendices/02ApendiceB}
 %\include{...}
 %\include{...}
 %\include{...}
