--- a/LatexTFG/Capitulos/05Capitulo5.tex
+++ b/LatexTFG/Capitulos/05Capitulo5.tex
@@ -28,11 +28,11 @@ En este capítulo se exponen los resultados finales del proyecto, así como se pre
 
 El trabajo aquí presentado se enmarca dentro del campo de la medicina. Dentro de este amplio campo podemos encontrar todo tipo de soluciones y aplicaciones que tratan de facilitar la vida al usuario, en este caso concreto, al paciente.
 
-Tras la realización del proyecto, se ha obtenido un producto final que podría ser considerado como un prototipo. Este prototipo podría ser adaptado y mejorado con el fin de adaptarse aun más a las necesidades tanto de pacientes como de doctores. El producto final no ha sido probado en un contexto médico real, pero consideramos que podría probarse en un futuro sin realizar muchas modificaciones sobre el prototipo final, e ir incorporándose poco a poco al mundo sanitario.
+Tras la realización del proyecto, se ha obtenido un producto final que podría ser considerado como un prototipo. Este prototipo podría ser adaptado y mejorado con el fin de adaptarse aun más a las necesidades tanto de pacientes como de doctores. Consideramos que el producto final podría ser probado en un contexto médico real con altas posibilidades de aplicarse exitosamente. De esta forma, podría el proyecto final ir incorporándose poco a poco al mundo sanitario.
 
 Entre los posibles usos reales que podría adquirir el resultado de este trabajo en el futuro, podemos destacar su uso en hospitales, en pacientes con movilidad reducida con ciertas incapacidades que impidan su comparecencia en el hospital, e incluso en personas mayores con alto riesgo de padecer enfermedades cardíacas con el fin de prevenirlas y tratarlas de forma precoz.
 
-En definitiva, gracias a la realización de este trabajo, nos ha sido posible adentrarnos mínimamente en el campo de la medicina. Consideramos que todo lo relacionado con la medicina es un acontecimiento emocionante, ya que cualquier avance o mejora que se desarrolle, por mínimo que sea, es capaz de mejorar potencialmente la calidad de vida de multitud de personas. Aunque este sea el primer proyecto importante que realizamos íntimamente relacionado con este campo, no nos cabe duda, de que no será el último.
+En definitiva, gracias a la realización de este trabajo, nos ha sido posible adentrarnos mínimamente en el campo de la medicina. Consideramos que todo lo relacionado con la medicina es un acontecimiento emocionante, ya que cualquier avance o mejora que se desarrolle, por mínimo que sea, es capaz de mejorar potencialmente la calidad de vida de multitud de personas. Aunque este sea el primer proyecto importante que realizamos íntimamente relacionado con este campo, no nos cabe duda de que no será el último.
 
 %-------------------------------------------------------------------
 \section{Conclusions}
